<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitesmoke"
    android:id="@+id/main"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:background="@color/whitesmoke"
            android:src="@drawable/ic_back"
            app:tint="@color/brown" />

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:src="@drawable/sasada"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sasada"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/brown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location"
                app:tint="@color/brown" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tv_lokasi_sasada"
                android:textSize="14sp"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_phone"
                app:tint="@color/brown" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/no_sasada"
                android:textSize="14sp"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_price"
                app:tint="@color/brown" />

            <TextView
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tv_tarif"
                android:textSize="14sp"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_time"
                app:tint="@color/brown" />

            <TextView
                android:id="@+id/operatingHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jam_sasada"
                android:textSize="14sp"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_ig"
                app:tint="@color/brown" />

            <TextView
                android:id="@+id/instagramLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/link_sasada"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:autoLink="web"
                android:linksClickable="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_deskripsi"
            android:textSize="14sp"
            android:textColor="@color/brown" />

    </LinearLayout>
</LinearLayout>
